--- a/Java/tempfile/usb.properties
+++ b/Java/tempfile/usb.properties
@@ -1,8 +1,2 @@
-usb1=ReflectApp.MouseByUSB;
-usb2=ReflectApp.KeyByUSB; 
-<class>
-	<classname>person</classname>
-	<method>
-		<methodname>show</methodname>
-	</method>
-</class>
+usb1=ReflectApp.MouseByUSB
+usb2=ReflectApp.KeyByUSB
